# sct-fitter

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
dataobjects/: Particle.cpp  Particle.h
examples/: example.ipynb  kspipi.ipynb
generators/sct-gen/: evtgen.py
pysctfit/: fitmanager.py  main.py  wrapper.cpp  wrapper.py
resource/: evt.pdl
tests/: main.cpp  testDecayChain.cpp  testEvtPdlDatabase.cpp  testFitParams.cpp  testKalmanCalculator.cpp  testProjection.cpp  testThreeVector.cpp
treefitter/: Constraint.cpp  Constraint.h  ConstraintConfiguration.h  DecayChain.cpp  DecayChain.h  DummyParticle.h  FitManager.cpp  FitManager.h  FitParams.cpp  FitParams.h  InternalParticle.h  KalmanCalculator.cpp  KalmanCalculator.h  ParticleBase.cpp  ParticleBase.h  Projection.cpp  Projection.h
treefitter/include/: Constraint.h  DecayChain.h  DummyParticle.h  ErrCode.h  FitManager.h  FitParams.h  InternalParticle.h  KalmanCalculator.h  ParticleBase.h  Projection.h
treefitter/src/: Constraint.cpp  DecayChain.cpp  DummyParticle.cpp  FitManager.cpp  FitParams.cpp  InternalParticle.cpp  KalmanCalculator.cpp  ParticleBase.cpp  Projection.cpp
wrapper/: example.ipynb  sctparticle.py  wrapper.cpp  wrapper.py
